Components/Layout/Navbar.module.sass
.navbar
    display: flex
    align-items: center
    width: 100%
    // position: absolute
    background: #313131
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.35)
    height: 61px
    position: fixed
    z-index: 999
    top: 0
    justify-content: space-between

    @media ( max-width:  800px)
        justify-content: space-between

    .hamIconContainer
        display: none

    @media ( max-width:  800px)
        height: 50px

        .hamIconContainer
            display: flex
            margin: 0 15px
            padding: 0 0

    .searchBar
        width: 1300px
        height: 42px
        min-width: 200px
        margin: 0 0
        position: relative
        display: flex
        @media ( max-width:  800px)
            // margin-right: 36px
            // margin-left: 0px
            margin: 0 32px 0 0
            height: 32px
            // width: 290px

        .searchButton:hover
            background-color: #a1da37

        .searchButton
            position: relative
            display: flex
            align-items: center
            justify-content: center
            height: 100%
            width: 88px
            background-color: #8EBF30
            border-radius: 0 4px 4px 0
            cursor: pointer

            @media ( max-width:  800px)
                width: 30px

            .searchIcon
                // position: absolute
                color: #fff
                width: 30px
                bottom: 0
                z-index: 5
                @media ( max-width:  800px)
                    height: 13px

            input
                background: 0 0
                position: absolute
                z-index: 4
                width: 100%
                height: 100%
                outline: none
                border: none
                opacity: 0
                cursor: pointer

        .searchFocussed
            box-shadow: 0 0 0 3px #8EBF30

    // .searchInput:focus
    //     border: 3px solid #8EBF30
    //     height: 42px

    .searchInput
        width: 100%
        height: 100%
        border-radius: 4px 0 0 4px
        padding-left: 15px
        font-size: 16px
        outline: none
        border: none
        @media ( max-width:  800px)

    .searchInput:focus
        // border: 3px solid #8EBF30
        box-shadow: 0 0 0 3px #8EBF30

    .logoContainer
        color: #ffffff
        font-size: 21px
        font-weight: bolder
        margin: 0 15px
        @media ( max-width:  800px)
            display: none

    .basketContainer
        display: flex
        margin: 0 15px
        padding: 15px
        @media ( max-width:  800px)
            margin: 0 5px
            padding: 0 10px
        
        .basketIcon
            @media ( max-width:  800px)
                width: 24px

